convertedToMDAPI/objects/CaseAccount__c.object
<CustomObject>
    <label>Case Account</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Side #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>AccountConnection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to Account Connection for Offset calculation</inlineHelpText>
        <label>Account Connection</label>
        <referenceTo>AccountConnection__c</referenceTo>
        <relationshipLabel>Case Accounts</relationshipLabel>
        <relationshipName>CaseAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Site the case should be linked to</description>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Linked Cases</relationshipLabel>
        <relationshipName>CaseSites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case the sites should be linked ot</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>CaseSites</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Order to sort Accounts in list</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Role the account is fulfilling on the case</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PATIENT</fullName>
                    <label>Patient</label>
                </value>
                <value>
                    <fullName>SITE</fullName>
                    <label>Site</label>
                </value>
                <value>
                    <fullName>TEAM</fullName>
                    <label>Team</label>
                </value>
                <value>
                    <fullName>APH</fullName>
                    <label>Apheresis</label>
                </value>
                <value>
                    <fullName>PICK</fullName>
                    <label>Pick Up</label>
                </value>
                <value>
                    <fullName>PLANT</fullName>
                    <label>Plant</label>
                </value>
                <value>
                    <fullName>REL</fullName>
                    <label>Release Hub</label>
                </value>
                <value>
                    <fullName>SHIP</fullName>
                    <label>Delivery</label>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransitOffset__c</fullName>
        <description>Value of the Transit Time (in hours)</description>
        <inlineHelpText>Value of the Transit Time (in hours)</inlineHelpText>
        <label>Transit Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>